{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 29,
  "lineage": "88edc8c5-7b73-16c4-eaa2-3c8b98ca93eb",
  "resources": [
    {
      "module": "module.elb_http_rule",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-799149569",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c18605c1ded54d39",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb_security_group.aws_security_group.main",
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:151042271496:security-group/sg-0c18605c1ded54d39",
            "description": "sg_elb_jumia_neuhaus - Security Group",
            "egress": [],
            "id": "sg-0c18605c1ded54d39",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_elb_jumia_neuhaus",
            "name_prefix": "",
            "owner_id": "151042271496",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d9ee50d7765ee682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elb_test_jumia_neuhaus",
      "mode": "managed",
      "type": "aws_elb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:151042271496:loadbalancer/tf-lb-20220514203825607200000001",
            "availability_zones": [
              "eu-west-2a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20220514203825607200000001-498945200.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20220514203825607200000001",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "tcp",
                "lb_port": 80,
                "lb_protocol": "tcp"
              }
            ],
            "name": "tf-lb-20220514203825607200000001",
            "security_groups": [
              "sg-0c18605c1ded54d39"
            ],
            "source_security_group": "151042271496/sg_elb_jumia_neuhaus",
            "source_security_group_id": "sg-0c18605c1ded54d39",
            "subnets": [
              "subnet-0af95b4593627a289"
            ],
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.elb_security_group.aws_security_group.main",
            "module.subnet-public-a.aws_subnet.main",
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend_jumianeuhaus",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a244485e2e4ffd03",
            "arn": "arn:aws:ec2:eu-west-2:151042271496:instance/i-08e832db192de2a38",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e832db192de2a38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "frontendkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0de67ebaa9770eac0",
            "private_dns": "ip-10-10-1-204.eu-west-2.compute.internal",
            "private_ip": "10.10.1.204",
            "public_dns": "ec2-52-56-217-50.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.217.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d65b1d6d05d020fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af95b4593627a289",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ca8e04cf01fa309"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.sg_vpc_jumia_neuhaus.aws_security_group.main",
            "module.subnet-public-a.aws_subnet.main",
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:151042271496:internet-gateway/igw-03dc11205f7777dac",
            "id": "igw-03dc11205f7777dac",
            "owner_id": "151042271496",
            "vpc_id": "vpc-0d9ee50d7765ee682"
          },
          "dependencies": [
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route",
      "mode": "managed",
      "type": "aws_route",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03dc11205f7777dac",
            "id": "r-rtb-0b39b45e2f134b55b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b39b45e2f134b55b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.main",
            "module.route_table.aws_route_table.main",
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:151042271496:route-table/rtb-0b39b45e2f134b55b",
            "id": "rtb-0b39b45e2f134b55b",
            "owner_id": "151042271496",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03dc11205f7777dac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d9ee50d7765ee682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaed68ba00241c7b",
            "route_table_id": "rtb-0b39b45e2f134b55b",
            "subnet_id": "subnet-0af95b4593627a289"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.route_table.aws_route_table.main",
            "module.subnet-public-a.aws_subnet.main",
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg_vpc_jumia_neuhaus",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:151042271496:security-group/sg-00ca8e04cf01fa309",
            "description": "sg_vpc_jumia_neuhaus - Security Group",
            "egress": [],
            "id": "sg-00ca8e04cf01fa309",
            "ingress": [],
            "name": "sg_vpc_jumia_neuhaus",
            "name_prefix": "",
            "owner_id": "151042271496",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d9ee50d7765ee682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ssh_rule_thesis",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3066493613",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00ca8e04cf01fa309",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_vpc_jumia_neuhaus.aws_security_group.main",
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-private-a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:151042271496:subnet/subnet-08f174ce538042aef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f174ce538042aef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151042271496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d9ee50d7765ee682"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-private-b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:151042271496:subnet/subnet-01e30f74f9c2cf7c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e30f74f9c2cf7c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151042271496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d9ee50d7765ee682"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-public-a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:151042271496:subnet/subnet-0af95b4593627a289",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af95b4593627a289",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151042271496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d9ee50d7765ee682"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-public-b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:151042271496:subnet/subnet-02b70c99f19029603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b70c99f19029603",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151042271496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d9ee50d7765ee682"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test_egress_rule",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1564869384",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00ca8e04cf01fa309",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_vpc_jumia_neuhaus.aws_security_group.main",
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.test_rdp_rule_jumia",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3389,
            "id": "sgrule-3841592894",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00ca8e04cf01fa309",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3389,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg_vpc_jumia_neuhaus.aws_security_group.main",
            "module.vpc_jumia_neuhaus.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_jumia_neuhaus",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:151042271496:vpc/vpc-0d9ee50d7765ee682",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b7020a4e8223cd07",
            "default_route_table_id": "rtb-0d8c318b70a51544e",
            "default_security_group_id": "sg-0ffb6108dc70f4f2b",
            "dhcp_options_id": "dopt-001c57afa39b8063c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d9ee50d7765ee682",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d8c318b70a51544e",
            "owner_id": "151042271496"
          }
        }
      ]
    }
  ]
}